@@ -1,6 +1,6 @@
 0.69
 - Add interface returning drive capabilityes (cdio_get_drive_cap).
-- Minimal cdrdao image reading (thanks to Svend S. sorensen)
+- Minimal cdrdao image reading (thanks to Svend S. Sorensen)
 - Some important (I think) bug fixes
 - Redo types of lsn and lba to allow negative values. Should model MMC3
   specs. Add max/min values for lsn.
@@ -11,6 +11,7 @@
   via options --no-hexdump and --hexdump
 - better NRG reading (thanks to Michael Kukat via extractnrg.pl)
 - better tracking of allocated variables (cd-read, cd-info, FreeBSD)
+- Add interface to read PVD and pick out some of the fields in that.
 
 0.68
 - More honest about mode1 reading in backends. Remove some of the bogusness.
@@ -119,4 +120,4 @@
 0.1
   Routines split off from VCDImager.
 
-$Id: NEWS,v 1.44 2004/06/09 11:01:20 rocky Exp $
+$Id: NEWS,v 1.45 2004/06/19 02:27:19 rocky Exp $
